--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.21.0",
+    "@ant-design/icons": "^5.3.7",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "query-string": "^9.0.0",
     "react": "^18",
